--- a/src/AppBundle/Resources/views/utilisateurs.html.twig
+++ b/src/AppBundle/Resources/views/utilisateurs.html.twig
@@ -30,11 +30,18 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+
+    <!-- SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </head>
 
 <body class="page-container-bg-solid">
 
 <div id="wrapper">
+    <script>/*swal("Good job!", "You clicked the button!", "success");*/</script>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -266,6 +273,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
+
                                     {% for user in utilisateurs %}
                                     <tr>
                                         <td>{{ user.id }}</td>
@@ -276,8 +284,36 @@
                                         <td>
                                             <a href="" class="btn btn-primary"><i class="fa fa-user-secret"></i> </a>
                                             <a href="" class="btn btn-success" ><i class="fa fa-edit"></i> </a>
-                                            <a href="" class="btn btn-danger"><i class="fa fa-remove"></i> </a>
+                                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter{{ user.id }}">
+                                                <i class="fa fa-remove"></i>
+                                            </button>
 
+                                            {#<button class="btn btn-danger" data-photo-id="{{ user.id }}"><i class="fa fa-remove"></i></button>#}
+                                            <!-------------------------------------------->
+
+                                            <!--------------------------------------------->
+
+                                            {#<a href="{{ path('delete_user',{'id':user.id}) }}" class="btn btn-danger"><i class="fa fa-remove"></i> </a>#}
+                                            <!-- Modal Delete-->
+                                            <div class="modal fade" id="exampleModalCenter{{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLongTitle">Delete User</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            Are you sur you want to delete : <strong>{{ user.username }}</strong> from Data Base ?
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                                            <a href="{{ path('delete_user',{'id':user.id}) }}" type="button" class="btn btn-primary">Delete</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                     {% endfor %}
@@ -313,6 +349,36 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ asset('temp1/dist/js/sb-admin-2.js') }}"></script>
+
+<script>
+    $('button.btn btn-danger').click(function() {
+        var photoId = $(this).attr("data-photo-id");
+        deletePhoto(photoId);
+    });
+
+    function deletePhoto(photoId) {
+        swal({
+            title: "Are you sure?",
+            text: "Are you sure that you want to delete this photo?",
+            type: "warning",
+            showCancelButton: true,
+            closeOnConfirm: false,
+            confirmButtonText: "Yes, delete it!",
+            confirmButtonColor: "#ec6c62"
+        }, function() {
+            $.ajax({
+                url: "/api/photos/" + photoId,
+                type: "DELETE"
+            })
+                .done(function(data) {
+                    swal("Deleted!", "Your file was successfully deleted!", "success");
+                })
+                .error(function(data) {
+                    swal("Oops", "We couldn't connect to the server!", "error");
+                });
+        });
+    }
+</script>
 
 </body>
 
