--- a/src/AppBundle/Resources/views/utilisateurs.html.twig
+++ b/src/AppBundle/Resources/views/utilisateurs.html.twig
@@ -200,32 +200,32 @@
                             <br>
                         </div>
                         <div class="portlet-body form">
-                            <form role="form">
+                            <form role="form" action="{{ path('add_user') }}" method="post">
                                 <div class="form-body">
                                     <div class="form-group">
                                         <label>Email Address</label>
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                                            <input type="text" class="form-control" placeholder="Email Address"> </div>
+                                            <input name="email" type="text" class="form-control" placeholder="Email Address"> </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label>User Name</label>
                                         <div class="input-icon right">
-                                            <input type="text" class="form-control input-circle" placeholder="User Name"> </div>
+                                            <input name="username" type="text" class="form-control input-circle" placeholder="User Name"> </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="exampleInputPassword1">Password</label>
                                         <div class="input-group">
-                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                            <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                             <span class="input-group-addon"><i class="fa fa-user font-red"></i></span>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleInputPassword1">Confirm Password</label>
                                         <div class="input-group">
-                                            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirm Password">
+                                            <input name="confirmPassword" type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirm Password">
                                             <span class="input-group-addon"><i class="fa fa-user font-red"></i></span>
                                         </div>
                                     </div>
