--- a/src/AppBundle/Resources/views/utilisateurs.html.twig
+++ b/src/AppBundle/Resources/views/utilisateurs.html.twig
@@ -292,19 +292,62 @@
                                         <td>{% if user.enabled==1 %} <a href="" class="btn btn-success disabled">Active</a> {% else %} <a href="" class="btn btn-danger">Disctive</a>{% endif %}</td>
                                         <td>
                                             <a href="#" class="btn btn-primary"><i class="fa fa-user-secret"></i> </a>
-                                            <a href="#" class="btn btn-success" ><i class="fa fa-edit"></i> </a>
-                                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter{{ user.id }}">
+                                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalEdit{{ user.id }}" >
+                                                <i class="fa fa-edit"></i> </button>
+                                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#ModalDelete{{ user.id }}">
                                                 <i class="fa fa-remove"></i>
                                             </button>
 
                                             {#<button class="btn btn-danger" data-photo-id="{{ user.id }}"><i class="fa fa-remove"></i></button>#}
                                             <!-------------------------------------------->
+                                                <!---- Modal Edite ------------>
+                                            <div class="modal fade" id="ModalEdit{{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLongTitle">Edite User</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div class="portlet light ">
+                                                                <div class="portlet-title">
+                                                                    <br>
+                                                                </div>
+                                                                <div class="portlet-body form">
+                                                                    <form role="form" action="{{ path('update_user', {'id':user.id}) }}" method="post">
+                                                                        <div class="form-body">
+                                                                            <div class="form-group">
+                                                                                <label>Email Address</label>
+                                                                                <div class="input-group">
+                                                                                    <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                                                                                    <input name="email" type="text" class="form-control" value="{{ user.email }}" > </div>
+                                                                            </div>
 
-                                            <!--------------------------------------------->
+                                                                            <div class="form-group">
+                                                                                <label>User Name</label>
+                                                                                <div class="input-icon right">
+                                                                                    <input name="username" type="text" class="form-control input-circle" value="{{ user.username }}"> </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="form-actions">
+                                                                            <button type="submit" class="btn btn-success btn-block">Update</button>
+                                                                        </div>
+                                                                    </form>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                                            <a href="{{ path('update_user',{'id':user.id}) }}" type="button" class="btn btn-primary">Update</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
 
-                                            {#<a href="{{ path('delete_user',{'id':user.id}) }}" class="btn btn-danger"><i class="fa fa-remove"></i> </a>#}
-                                            <!-- Modal Delete-->
-                                            <div class="modal fade" id="exampleModalCenter{{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                                <!---- Modal Delete ------------>
+                                            <div class="modal fade" id="ModalDelete{{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                                                 <div class="modal-dialog modal-dialog-centered" role="document">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
